--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -12,45 +12,97 @@
   <link rel="stylesheet" href="../css/login_empresa.css">
   <link rel="stylesheet" href="../css/general.css">
 
-
-  <!--[if lt IE 9]>
-  		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  	<![endif]-->
-
 </head>
 
 <body>
-  <header>
-  <!-- Arbol de navegacion -->
+
+  <!-- Navbar -->
+  <div class="row">
+    <div class="col-xs-12 col-lg-12">
+      <div class="navbar-wrapper">
+        <div class="container">
+          <div class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                <a class="navbar-brand" href="../index.html">MASTERCHECK</a>
+              </div>
+
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                  <li class="active"><a href="#">Nose <span class="sr-only">(current)</span></a></li>
+                  <li><a href="#">Nose</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Action</a></li>
+                      <li><a href="#">Another action</a></li>
+                      <li><a href="#">Something else here</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">Separated link</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">One more separated link</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <!--
+                <form class="navbar-form navbar-left">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                  </div>
+                  <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+              -->
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="login_cliente.html">Particular</a></li>
+                  <li><a href="login_empresa.html">Empresa</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Action</a></li>
+                      <li><a href="#">Another action</a></li>
+                      <li><a href="#">Something else here</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+          </div><!-- /.nav-inverse -->
+        </div><!-- /.container-fluid -->
+      </div><!-- /.navbar-wrapper -->
+    </div><!-- /.col -->
+  </div><!-- /.row -->
+
+  <!-- Arbol de navegacion
     <div class="row">
       <div class="col-xs-12 col-md-12 col-lg-12 noPaddingDirectorio">
         <ol class="breadcrumb panelLogin">
           <li class="glyphicon glyphicon-home"><a href="../index.html">  Inicio</a></li>
           <li class="active"><a href="#">Empresa</a></li>
-          <!-- <li class="active">Data</li>-->
         </ol>
       </div>
     </div>
-  </header>
+  -->
 
-
-
-
-  <section>
-
-    <!-- Logotipo -->
+    <!-- Logotipo
     <div class="jumbotron">
       <p class="colorTitulo text-left">MASTER CHEQUE</p>
         <hr>
     </div>
-  </section>
+    -->
 
-  <div class="container-fluid">
 
+  <div class="container-welcome">
     <div class="row">
-
       <div class="col-xs-12 col-lg-8">
-
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title text-center">Bienvenido al área de cliente</h3>
@@ -84,7 +136,6 @@
                     </a><br>
 
                     -->
-
             </form>
           </div>
         </div>
@@ -94,8 +145,9 @@
   </div>
 
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
-
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/login_empresa.js"></script>
 
 </body>
