--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Estyles -->
+  <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/index.css">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
   <!-- To insert the icon: -->
   <link type="text/css" rel="stylesheet" href="font-awesome/css/font-awesome.css" />
 
@@ -21,122 +22,110 @@
 
   <!-- Navbar -->
   <div class="row">
-  <div class="col-xs-12 col-lg-12">
-  <div class="navbar-wrapper">
-  <div class="container">
-    <div class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">MASTERCHECK</a>
-       </div>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Nose <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">Nose</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
-            </ul>
-            <!--
-            <form class="navbar-form navbar-left">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+    <div class="col-xs-12 col-lg-12">
+      <div class="navbar-wrapper">
+        <div class="container">
+          <div class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                <a class="navbar-brand" href="index.html">MASTERCHECK</a>
               </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-          -->
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="html/login_cliente.html">Particular</a></li>
-              <li><a href="html/login_empresa.html">Empresa</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
+
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                  <li class="active"><a href="#">Nose <span class="sr-only">(current)</span></a></li>
+                  <li><a href="#">Nose</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Action</a></li>
+                      <li><a href="#">Another action</a></li>
+                      <li><a href="#">Something else here</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">Separated link</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">One more separated link</a></li>
+                    </ul>
+                  </li>
                 </ul>
-              </li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </div><!-- /.nav-inverse -->
-  </div><!-- /.container-fluid -->
-</div><!-- /.navbar-wrapper -->
-</div>
-</div>
+                <!--
+                <form class="navbar-form navbar-left">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                  </div>
+                  <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+              -->
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="html/login_cliente.html">Particular</a></li>
+                  <li><a href="html/login_empresa.html">Empresa</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Action</a></li>
+                      <li><a href="#">Another action</a></li>
+                      <li><a href="#">Something else here</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">Separated link</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+          </div><!-- /.nav-inverse -->
+        </div><!-- /.container-fluid -->
+      </div> <!-- /.navbar-wrapper -->
+    </div><!-- /.col -->
+  </div><!-- /.row -->
 
 
-    <div class="">
+  <div class="">
 
     <!-- Slider de imagenes de fondo -->
-      <div class="row">
-        <div class="col-xs-12 col-md-8 col-lg-12">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators
+    <div class="row">
+      <div class="col-xs-12 col-md-8 col-lg-12">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
         -->
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-          <div class="item active">
-            <img src="imagenes/fondo1.jpg" alt="Bar Santos">
-          </div>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="imagenes/fondo1.jpg" alt="Bar Santos">
+            </div>
 
-          <div class="item">
-            <img src="imagenes/fondo2.jpg" alt="CBar Naru">
-          </div>
+            <div class="item">
+              <img src="imagenes/fondo2.jpg" alt="CBar Naru">
+            </div>
 
-          <div class="item">
-            <img src="imagenes/fondo3.jpg" alt="Bar Pata Negra">
+            <div class="item">
+              <img src="imagenes/fondo3.jpg" alt="Bar Pata Negra">
+            </div>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- Panel de busqueda -->
+    <div class="row">
+      <div class="col-xs-12 col-md-8 col-lg-12">
+        <div class="index-busc">
+          <div class="wrapper">
+            <div class="index-busc-cab">
+              <h3 class="titulo-busqueda">Busca tu oferta mas cercana</h3>
 
-
-
-    <!-- Cabecera de la pagina -->
-
-
-    <!-- Fin cabecera de la pagina -->
-
-    <!-- Logotipo -->
-
-    <!-- Fin logotipo -->
-  </div>
-
-  <!-- Panel de busqueda -->
-      <div class="row">
-        <div class="col-xs-12 col-md-8 col-lg-12">
-          <div class="index-busc">
-            <div class="wrapper">
-          <div class="index-busc-cab">
-              <h3 class="panel-title text-center">Busca tu oferta mas cercana</h3>
-
-            <form method="post" action="html/mostrarBusquedas.php">
+              <form method="post" action="html/mostrarBusquedas.php">
 
                 <!-- Fila de busqueda siempre visible -->
                 <div class="row">
@@ -195,20 +184,20 @@
                     </div>
                   </div>
                 </div>
-            </form>
-          </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-      <!-- Imagenes de bares -->
-      <div class="row">
-        <div class="col-xs-12 col-md-4 col-lg-12">
-          <div id="ofertasDestacadas" class="index-busc">
-            <div class="wrapper">
-              <div class="index-busc-cab">
-                <h3 class="panel-title text-left">Empresas destacadas</h3>
+    <!-- Imagenes de bares -->
+    <div class="row">
+      <div class="col-xs-12 col-md-4 col-lg-12">
+        <div class="index-busc ofertasDestacadas">
+          <div class="wrapper">
+            <div class="index-busc-cab cuadro-ofertas">
+              <h4 class="text-left titulo-empresas">Empresas destacadas</h4>
               <!--
               <span class="input-group-btn">
 
@@ -221,22 +210,21 @@
 
               </span>
               -->
-                <div class="row">
-                  <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                      <img id="santos" src="imagenes/barSantos.jpg" onclick="aumentarImg()" alt="Bar Santos">
-                    </a>
-                  </div>
-                  <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                      <img src="imagenes/pataNegra.jpg" alt="Bar Pata Negra">
-                    </a>
-                  </div>
-                  <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                      <img src="imagenes/naru.jpg" alt="Bar Naru">
-                    </a>
-                  </div>
+              <div class="row">
+                <div class="col-xs-6 col-md-3">
+                  <a href="#" class="thumbnail">
+                    <img id="santos" src="imagenes/barSantos.jpg" onclick="aumentarImg()" alt="Bar Santos">
+                  </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a href="#" class="thumbnail">
+                    <img src="imagenes/pataNegra.jpg" alt="Bar Pata Negra">
+                  </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a href="#" class="thumbnail">
+                    <img src="imagenes/pataNegra.jpg" alt="Bar Naru">
+                  </a>
                 </div>
               </div>
             </div>
@@ -244,13 +232,14 @@
         </div>
       </div>
     </div>
+  </div>
 
 
 
-    <div class="container">
+  <div class="container">
 
 
-    </div>
+  </div>
 
   <footer>
     <div class="container">
@@ -265,7 +254,7 @@
 
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="js/jquery-3.2.1.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
   <script src="js/index.js"></script>
