--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -110,39 +110,26 @@
           <div class="panel-heading">
             <h3 class="panel-title text-center">Bienvenido al área de cliente</h3>
           </div>
-
-<<<<<<< HEAD
-            <div class="panel-body">
-              <h5 class="text-center">Iniciar sesion</h5>
-              <div class="col-xs-12 col-md-8 col-lg-12">
-              <form method="post" action="usuario.php" name="form">
-=======
           <div class="panel-body">
             <h5 class="text-center">Iniciar sesion</h5>
-            <div class="col-xs-12 col-md-8 col-lg-12">
-              <form method="post" action="ficha_cliente.php" name="form">
->>>>>>> 1f6b2f6c88ad78f3fef905f63815d1fba640c74b
-
+            <form method="post" action="usuario.php" name="form">
                 <div class="input-group ajusteLateral">
                   <input id="email" name="email" type="email" placeholder="email" class="form-control inputForm" onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
 
                   <input id="password" name="contra" type="password" placeholder="Contraseña" class="form-control inputForm" onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
                 </div>
-
-
                 <div class="input-group-btn ajusteLateral separacionTop">
-                  <button id="btnAcceder" type="submit" class="btn btn-primary">Acceder</button>
+                  <input type="submit" value="Acceder" name="enviar">
                   <a id="btnAlta" class="btn btn-primary" role="button" href="alta_cliente.php">Alta nueva</a>
                   <a id="btnOlvido" class="btn btn-primary" role="button" href="forgotten_cliente.php">¿Has olvidado tu contraseña?</a>
                 </div>
-              </form>
-            </div>
+            </form>
           </div>
         </div>
+       </div>
       </div>
     </div>
-  </div>
-
+    
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
